--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,9 @@ body * {
 main {
     max-width: 580px;
     width: 90%;
-    margin: auto;
+    margin: 32px auto;
     display: grid;
     gap: 24px;
-    margin-top: 32px;
 }
 
 header {
@@ -42,8 +41,7 @@ header {
 header img {
     height: 112px;
     border-radius: 50%;
-    margin-top: 4px;
-    margin-left: 4px;
+    margin: 4px 0 0 4px;
 }
 
 section {
@@ -84,4 +82,5 @@ section ul {
 .channel-list img {
     border-radius: 50%;
     width: 70px;
+    border: 1px solid #443e54;
 }
