--- a/css/style.css
+++ b/css/style.css
@@ -30,18 +30,29 @@ main {
 }
 
 header {
-    background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
-    background-color: #9572FC;
-    border-radius: 50%;
+    padding-top: 32px;
+    height: calc(120px + 32px);
+}
+
+header div {
     width: 120px;
-    height: 120px;
-    margin: 32px auto 0;
+    margin: auto;
+    background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+    border-radius: 50%;
+    display: flex;
+    padding: 4px;
+    transition: transform .3s;
+    animation: fromTop .7s .2s backwards;
+    
+}
+
+header div:hover {
+    transform: scale(1.1);
 }
 
 header img {
-    height: 112px;
+    width: 100%;
     border-radius: 50%;
-    margin: 4px 0 0 4px;
 }
 
 section {
@@ -49,6 +60,18 @@ section {
     background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
     padding-top: 4px;
     border-radius: 10px;
+}
+
+section:nth-child(1) {
+    animation: fromLeft .7s .2s backwards;
+}
+
+section:nth-child(2) {
+    animation: fromRight .7s .5s backwards;
+}
+
+section:nth-child(3) {
+    animation: fromLeft .7s .8s backwards;
 }
 
 section div {
@@ -74,6 +97,14 @@ section ul {
     margin-top: 24px;
 }
 
+section ul li {
+    transition: .3s;
+}
+
+section ul li:hover {
+    transform: scale(1.1);
+}
+
 .games-list img {
     width: 90px;
     border-radius: 8px;
@@ -83,4 +114,40 @@ section ul {
     border-radius: 50%;
     width: 70px;
     border: 1px solid #443e54;
+}
+
+/* Animation */
+
+@keyframes fromTop {
+    from {
+        opacity: 0;
+        transform: translateY(-30px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes fromLeft {
+    from {
+        opacity: 0;
+        transform: translateX(-50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes fromRight {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
